k8s/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7474
    targetPort: 7474
  - name: bolt
    port: 7687
    targetPort: 7687
  selector:
    app: neo4j
